Fixed issue with changing opacity when toggling layer visibility

--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -23,7 +23,7 @@
   height: 30px;
 }
 
-.selected-color {
+.opacity {
   opacity: 50%;
 }
 
